Tile map sistem added

--- a/generacion/engine.cfg
+++ b/generacion/engine.cfg
@@ -3,3 +3,16 @@
 name="generacion"
 main_scene="res://world.tscn"
 icon="res://icon.png"
+
+[flag]
+
+=false
+
+[image_loader]
+
+filter=false
+gen_mipmaps=false
+
+[mi]
+
+=false
