--- a/generacion/engine.cfg
+++ b/generacion/engine.cfg
@@ -1,7 +1,7 @@
 [application]
 
 name="generacion"
-main_scene="res://world.tscn"
+main_scene="res://Scenes/world.tscn"
 icon="res://icon.png"
 
 [flag]
